Final commenting touches and clean up